--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,16 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+.camel*
+.MonoDevelop
 # User-specific files
 *.rsuser
 *.suo
 *.user
 *.userosscache
 *.sln.docstates
-
+minio-data/
+pg_data/
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
