--- a/ms-cml-quarkus-restful/src/main/resources/application.properties
+++ b/ms-cml-quarkus-restful/src/main/resources/application.properties
@@ -5,11 +5,10 @@ quarkus.banner.enabled=false
 #
 # Camel
 #
-# camel.context.name=quarkus-camel-example-rest-json
+camel.context.name=qms-cml-quarkus-restful
 #
-# openapi
-#
+
 quarkus.native.resources.includes=openapi.json
-quarkus.camel.openapi.codegen.model-package=com.github.drr00t.model
+quarkus.camel.openapi.codegen.model-package=com.github.drr00t.addms.model
 quarkus.camel.openapi.codegen.not-null-jackson=true
 camel.rest.bindingPackageScan=${quarkus.camel.openapi.codegen.model-package}
