--- a/ms-cml-restful/src/main/docker/Dockerfile.native-micro
+++ b/ms-cml-restful/src/main/docker/Dockerfile.native-micro
@@ -10,11 +10,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/getting-started .
+# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/ms-cml-restful .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/getting-started
+# docker run -i --rm -p 8080:8080 quarkus/ms-cml-restful
 #
 ###
 FROM quay.io/quarkus/quarkus-micro-image:2.0
