--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
-  "java.project.referencedLibraries": [
-    "lib/**/*.jar",
-    "/home/adriano/.config/Code/User/globalStorage/redhat.vscode-camelk/java-dependencies/*.jar"
-  ],
+  "java.project.referencedLibraries": ["lib/**/*.jar"],
   "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
   "java.format.settings.profile": "GoogleStyle",
   "java.configuration.updateBuildConfiguration": "automatic"
